@@ -6,6 +6,8 @@ mac getIpByName liefert name von IPnum
 opsi-script (4.12.4.27) stable; urgency=low
 
  * new generic section parameter /AllUserProfiles (as alias for /AllNTUserProfiles)
+ * osxmlsections: fixes for creating not existing file
+ * osparser: doXMLPatcg2Main: check acces rights and for successful savetofile
 
 -- d.oertel <d.oertel@uib.de> Thu, 12 Aug 2021 15:00
 
